--- a/WritingPlatform/Views/Users/Index.cshtml
+++ b/WritingPlatform/Views/Users/Index.cshtml
@@ -8,19 +8,21 @@
 
 
 <table class="table">
-    <tr>
-        <th>@Html.DisplayNameFor(model => model.Login)</th>
-        <th>@Html.DisplayNameFor(model => model.Email)</th>
-
-    </tr>
-
-    @foreach (var item in Model)
-    {
+    <thead class="thead-dark">
         <tr>
-            <td>@Html.DisplayFor(modelItem => item.Login)</td>
-            <td>@Html.DisplayFor(modelItem => item.Email)</td>
+            <th>@Html.DisplayNameFor(model => model.Login)</th>
+            <th>@Html.DisplayNameFor(model => model.Email)</th>
+
         </tr>
-    }
+    </thead>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Login)</td>
+                <td>@Html.DisplayFor(modelItem => item.Email)</td>
+            </tr>
+        }
 
 </table>
 
