--- a/WritingPlatform/Views/Works/Create.cshtml
+++ b/WritingPlatform/Views/Works/Create.cshtml
@@ -7,7 +7,6 @@
 <h2>Create</h2>
 
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -24,19 +23,10 @@
             </div>
         </div>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.DateOfPublication, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-               
-                @Html.TextBox("DateOfCreate", DateTime.Now.ToString("yyyy-MM-dd"), new { @readonly = "readonly", @id = "createDate" })
-                @Html.ValidationMessageFor(model => model.DateOfPublication, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
         <div class="form-group">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Content, 5, 50, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Content, 5, 50, new { htmlAttributes = new { @class="form-control z-depth-1" } })
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,28 +34,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GenreId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-               @Html.DropDownListFor(model => model.GenreId, ViewBag.GenreList as SelectList)
+               @Html.DropDownListFor(model => model.GenreId, ViewBag.GenreList as SelectList,htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.GenreId, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @{
-                    
-                    
-                    Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } });
-                }
-               
-                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </div>
     </div>
