--- a/WritingPlatform/Views/Works/Details.cshtml
+++ b/WritingPlatform/Views/Works/Details.cshtml
@@ -14,13 +14,6 @@
 
 <h2>Learn More</h2>
 
-@*<div class="form-group">
-        @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextAreaFor(model => model.Content, 10, 150, new { @readonly = "readonly", htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>*@
-
 @using (Ajax.BeginForm(ajax))
 {
     @Html.AntiForgeryToken()
@@ -55,14 +48,14 @@
                  {
                      Text = x.ToString(),
                      Value = x.ToString()
-                 }))
+                 }),"",new { @class = "form-control" })
                 @Html.HiddenFor(model=>model.Id)
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Оставить отзыв" class="btn btn-default" />
+                <input type="submit" value="Оставить отзыв" class = "btn btn-primary" />
             </div>
         </div>
 
@@ -72,15 +65,5 @@
         </div>
     </div>
 }
-
-
-
-@*@foreach (var item in ViewBag.CommentsList)
-    {
-            <td scope="col">Username: @item.UserName</td>
-            <p></p>
-            <p>Comment:<textarea readonly="readonly" rows="3" cols="40"> @item.Comment</textarea></p>
-            <p></p>
-    }*@
 
 
