--- a/WritingPlatform/Views/Works/_CommentsTable.cshtml
+++ b/WritingPlatform/Views/Works/_CommentsTable.cshtml
@@ -5,14 +5,15 @@
 }
 
 
+<h4>Rating : @ViewBag.Ratings</h4>
 
-<div>Rating : @ViewBag.Ratings</div>
+<h3 class="title-comments">Комментарии (@ViewBag.CommentsList.Count)</h3>
 
 @foreach (var item in ViewBag.CommentsList)
 {
     <p></p>
     <td scope="col">Username: @item.UserName</td>
     <p></p>
-    <td scope="col">Comment:<textarea readonly="readonly" rows="3" cols="40"> @item.Comment</textarea></td>
+    <td scope="col"><textarea readonly="readonly" class="form-control z-depth-1" rows="3" cols="40"> @item.Comment</textarea></td>
 
 }
