--- a/WritingPlatform/Views/Users/Index.cshtml
+++ b/WritingPlatform/Views/Users/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<WritingPlatform.Models.UsersViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Все пользователи";
 }
 
-<h2>Index</h2>
+<h2>Все пользователи</h2>
 
 
 <table class="table">
